--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginPage" />
+        <activity android:name=".MainPageActivity" />
+        <activity android:name=".RecordsPageActivity" />
+        <activity android:name=".RegisterPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainPageActivity" />
-        <activity android:name=".LogsPageActivity" />
-        <activity android:name=".RecordsPageActivity" />
-        <activity android:name=".RegisterPage" />
         <activity android:name=".UsersList" />
         <activity android:name=".SetDBPage" />
         <activity android:name=".UpdateInfo" />
