--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,7 @@
         <activity android:name=".LoginPage" />
         <activity android:name=".MainPageActivity" />
         <activity android:name=".RecordsPageActivity" />
-        <activity android:name=".RegisterPage">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".RegisterPage" />
         <activity android:name=".UsersList" />
         <activity android:name=".SetDBPage" />
         <activity android:name=".UpdateInfo" />
@@ -33,7 +28,13 @@
             android:name=".AddToTable"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".TablesList" />
-        <activity android:name=".GameList"></activity>
+        <activity android:name=".GameList" />
+        <activity android:name=".DBMainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
